--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,3 @@
-/* static/css/style.css */
-
 body {
     background-color: #000;
     color: #fff;
@@ -22,6 +20,13 @@ body {
     font-size: 1rem;
   }
   
+  .button-row {
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+    flex-wrap: wrap;
+  }
+  
   button {
     background-color: #fff;
     color: #000;
@@ -42,9 +47,11 @@ body {
     border: 1px solid #444;
     white-space: pre-wrap;
     word-wrap: break-word;
+    margin-top: 1rem;
   }
   
   .error {
     color: #ff5252;
+    margin-top: 1rem;
   }
   
