--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
   {% if plan %}
     <h2>Generated Plan</h2>
-    <pre id="output">{{ plan | tojson(indent=2) }}</pre>
+    <pre id="output">{{ plan }}</pre>
     <button type="button" id="copy-btn">Copy to Clipboard</button>
   {% elif error %}
     <p class="error">Error: {{ error }}</p>
